header z-index correction

--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -127,6 +127,7 @@ header {
 }
 
 header nav {
+    z-index: 1;
     transition: 0.5s;
     display : block;
     background-color : black;
